--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "payment-gateway-ft",
+  "name": "magiclog-technical-test-ft",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,8 +20,8 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@reduxjs/toolkit": "^1.9.5",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,13 +30,11 @@
     "joi": "^17.9.2",
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-credit-cards-2": "^1.0.3",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-redux": "^8.1.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.1.3",
-    "redux-persist": "^6.0.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -48,10 +46,6 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.26.10",
     "@eslint/js": "^9.17.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.3.1",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -72,13 +66,9 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^15.14.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.5.1",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.2.5",
-    "ts-jest-mock-import-meta": "^1.2.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
