refactor: update function exports, improve type definitions, and clean up eslint rules

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest",
-    "test:cov": "jest --coverage"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
